   can be used by standalone programs with user supplied rules.

 - Symbols in the core library are now referenced with a self-explanatory
   macro, as in ECL_SYM("SI::*EXIT-HOOKS*",1379) (Thanks to Douglas R. Miles
   for the idea).

 - The symbols from the AMOP are now exported from the CLOS package. This does
   not mean that everything has been implemented, but it makes the implemented
   options accessible.

 - Included support for multithreading under Windows/Cygwin (Thanks to Arthur
   Smyles for pointing out the differences from Linux's pthreads)

* Errors fixed:

 - The intermediate output of the compiler is written in the directory in which
   the output will reside. [1]

 - ENSURE-GENERIC-FUNCTION relies on ENSURE-GENERIC-FUNCTION-USING-CLASS for
   doing the real work of (re)defining generic functions. This means E-G-F now
   handles :METHOD-CLASS and :GENERIC-FUNCTION-CLASS properly.

 - Implemented the standard behavior of NO-APPLICABLE-METHOD. Formerly, ECL
   expected this function to simply fail and never return.

 - --disable-shared works again in Mingw. The header file external.h has to be
   modified at build time to remove a declaration "dllimport" which mingw does
   not support in the statically linked code. MSVC++ does not seem to have a
   problem with it, though.

 - It is now possible to define subclasses of STANDARD-CLASS. Before, some
   slots were not properly inherited by subclasses, causing errors when doing
   something like
	> (defclass foo (standard-class) ())
	> (defclass faa () () (:metaclass foo))

 - Callback functions are now 'static' so that the same names can be used
   in different files.

 - New method for DOCUMENTATION to operate on slot-definition objects.

 - New slot options are now allowed, as well as new metaclass options.

* Documentation:

 - The HTML manuals now use CSS for a more appealing look.

* Notes:

 [1] Both bugs are related.

;;; Local Variables: ***
;;; mode:text ***
;;; fill-column:79 ***
;;; End: ***