@@ -507,7 +507,7 @@ fi
 
 AC_CONFIG_FILES([
   bare.lsp lsp/load.lsp clos/load.lsp cmp/load.lsp
-  ../Makefile Makefile c/Makefile doc/Makefile doc/ecl.man
+  ../Makefile Makefile c/Makefile doc/Makefile doc/ecl.man doc/ecl-config.man
   ecl/configpre.h:h/config.h.in bin/ecl-config.pre:util/ecl-config
   lsp/config.pre:lsp/config.lsp.in compile.pre:compile.lsp.in
   cmp/cmpdefs.pre:cmp/cmpdefs.lsp
