@@ -77,6 +77,8 @@ ECL 0.9i
  - Included support for multithreading under Windows/Cygwin (Thanks to Arthur
    Smyles for pointing out the differences from Linux's pthreads)
 
+ - New manual file for 'ecl-config' contributed by Peter Van Eynde.
+
 * Errors fixed:
 
  - The intermediate output of the compiler is written in the directory in which
